11/03/2013 Oleg Moskalenko <mom040267@gmail.com>,
	Peter Dunkley <peter.dunkley@crocodilertc.net>
Version 2.6.7.0 'Harding Grim':
	- CentOS 6 pre-compiled distribution.
	- Fedora pre-compiled distribution (TODO).
	- TURN_NO_TLS case compilation cleaning.
	- Text files cleaning.!

10/27/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.6.1 'Harding Grim':
	- SHA256 added as a non-standard message integrity option.
	- CentOS rpm specs added.
	- Peter Dunkley added to the authors list.

10/20/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.6.0 'Harding Grim':
	- Cygwin loopback relay interfaces fixed (Issue 62).
	- rpath added to the Makefile (Issue 63).
	- CONFLICTS added to FreeBSD port Makefile (Issue 64).
	- Certificate check options, for server and for the test client (Issue 65).
	- Some compilation cleaning.

10/09/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.5.2 'Harding Grim':
	- Documentation changes.
	- Redis-related memory leak fixed (Issue 61).

09/25/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.4.1 'Harding Grim':
	- Crash on uninitialized redis db name is fixed (Issue 59).
	- Optional authentication of STUN Binding request is implemented (Issue 60).

09/16/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.3.1 'Harding Grim':
	- Issue 58: support changing white/black IP lists while server is running.
	database tables (keys for redis) added for that new functionality.

09/03/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.2.2 'Harding Grim':
	- Issue 52: RFC 6062 relay endpoints connection process
	fixed for Linux pre-3.9 kernel.

09/03/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.2.1 'Harding Grim':
	- UDP performance improvements.
	- Issue 56: DTLS scaleability improvements.
	- Issue 55: DTLS support in Cygwin.
	- Issue 57: --pidfile option
	- Issue 52: RFC 6062 relay endpoints connection process fixed.
	- Issue 53: Fingerprints added to the indications.