@@ -99,6 +99,7 @@ turn_turnserver* create_turn_server(turnserver_id id, int verbose,
 				    int no_udp_relay,
 				    int stale_nonce,
 				    int stun_only,
+				    int no_stun,
 				    turn_server_addrs_list_t *alternate_servers_list,
 				    turn_server_addrs_list_t *tls_alternate_servers_list,
 				    turn_server_addrs_list_t *aux_servers_list,
